--- a/SpaceWars/WebContent/content/index.html
+++ b/SpaceWars/WebContent/content/index.html
@@ -1,37 +1,54 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="icon" href="http://getbootstrap.com/favicon.ico">
+<script src="js/jquery.js"></script>
+<title>Signin Template for Bootstrap</title>
 
-    <title>Signin Template for Bootstrap</title>
+<!-- Bootstrap core CSS -->
+<link href="css/bootstrap.css" rel="stylesheet">
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+<!-- Custom styles for this template -->
+<link href="css/signin.css" rel="stylesheet">
+</head>
+<body>
 
-    <!-- Custom styles for this template -->
-    <link href="css/signin.css" rel="stylesheet">
-  </head>
-  <body>
+	<div class="container">
+		<form class="form-signin">
+			<h2 class="form-signin-heading">Willkommen Comander!</h2>
+			<label for="username" class="sr-only">Name</label> <input
+				id="username" class="form-control"
+				placeholder="Wie sollen wir Sie nennen?" required="" autofocus=""
+				type="input">
 
-    <div class="container">
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Willkommen Comander!</h2>
-        <label for="username" class="sr-only">Name</label>
-        <input id="username" class="form-control" placeholder="Wie sollen wir Sie nennen?" required="" autofocus="" type="input">
+			<button class="btn btn-lg btn-primary btn-block" type="button"
+				onclick="submitUser()">Spiel starten</button>
+		</form>
 
-        
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Spiel starten</button>
-      </form>
+	</div>
+	<!-- /container -->
+	<script>
+		function submitUser() {
+			var username = $('#username').val();
+			$.ajax({
+				url : "/SpaceWars/login",
+				type : "POST",
+				data : {
+					"username" : username
+				},
+				success: function(result){
+					window.location.href = "html/menuMain.html"+result;
+				}
+			});
+		}
+	</script>
 
-    </div> <!-- /container -->
-
-
-  
-
-</body></html>
+</body>
+</html>
