--- a/SpaceWars/WebContent/content/html/menuMain.html
+++ b/SpaceWars/WebContent/content/html/menuMain.html
@@ -1,81 +1,75 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="http://getbootstrap.com/favicon.ico">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+<meta name="description" content="">
+<meta name="author" content="">
+<link rel="icon" href="http://getbootstrap.com/favicon.ico">
 
-    <title>Signin Template for Bootstrap</title>
+<title>Signin Template for Bootstrap</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.css" rel="stylesheet">
+<!-- Bootstrap core CSS -->
+<link href="../css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="../css/signin.css" rel="stylesheet">
-    <link href="../css/styles.css" rel="stylesheet">
-     
-  </head>
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Navigation ein-/ausblenden</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-             <h3><span class="label label-default  navbar-right" id="username">Spielername ist auf der Brücke</span></h3>
-        </div><!--/.navbar-collapse -->
-      </div>
-    </nav>
+<!-- Custom styles for this template -->
+<link href="../css/signin.css" rel="stylesheet">
+<link href="../css/styles.css" rel="stylesheet">
 
-    <div class="menu-box">
-       
-      <div class="btn-group">
-       <button class="btn btn-lg btn-primary btn-block" type="submit">Scharmützel</button>
-       <button type="button" class="btn btn-lg btn-primary btn-block dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mehrspieler</button>
-  <ul class="btn btn-lg btn-primary btn-block dropdown-menu">
-    <li><a href="#">Spiel erstellen</a></li>
-    <li><a href="#">Spiel beitreten</a></li>
-  </ul>
-       <button class="btn btn-lg btn-primary btn-block" type="submit">Highscore</button>
-       <button class="btn btn-lg btn-primary btn-block" type="submit">Einstellungen</button>
-       <button class="btn btn-lg btn-primary btn-block" type="submit">Spiel verlassen</button>
- </div>
-   
+</head>
+<body>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed"
+					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+					aria-controls="navbar">
+					<span class="sr-only">Navigation ein-/ausblenden</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse">
+				<h3>
+					<span class="label label-default  navbar-right" id="username">Spielername
+						ist auf der Brücke</span>
+				</h3>
+			</div>
+			<!--/.navbar-collapse -->
+		</div>
+	</nav>
+
+	<div class="menu-box">
+
+		<div class="btn-group">
+			<button class="btn btn-lg btn-primary btn-block" type="submit">Scharmützel</button>
+			<button type="button"
+				class="btn btn-lg btn-primary btn-block dropdown-toggle"
+				data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mehrspieler</button>
+			<ul class="btn btn-lg btn-primary btn-block dropdown-menu">
+				<li><a href="#" onclick="createGame()">Spiel erstellen</a></li>
+				<li><a href="#" onclick="joinGame()">Spiel beitreten</a></li>
+			</ul>
+			<button class="btn btn-lg btn-primary btn-block" type="button" onclick="getHighscore()">Highscore</button>
+			<button class="btn btn-lg btn-primary btn-block" type="button" onclick="showSettings()">Einstellungen</button>
+			<button class="btn btn-lg btn-primary btn-block" type="button" onclick="logout()">Spiel
+				verlassen</button>
+		</div>
 
 
 
- <!-- Bootstrap-JavaScript
+
+		<!-- Bootstrap-JavaScript
     ================================================== -->
-    <!-- Am Ende des Dokuments platziert, damit Seiten schneller laden -->
-    <script src="../js/jquery.js"></script>
-    <script src="../js/bootstrap.js"></script>
-    <!-- IE10-Anzeigefenster-Hack für Fehler auf Surface und Desktop-Windows-8 -->
-    <script src="../js/ie10-viewport-bug-workaround.js"></script>
-    <script>
-    function getUrlParameter(sParam)
-    {
-        var sPageURL = window.location.search.substring(1);
-        var sURLVariables = sPageURL.split('&');
-        for (var i = 0; i < sURLVariables.length; i++) 
-        {
-            var sParameterName = sURLVariables[i].split('=');
-            if (sParameterName[0] == sParam) 
-            {
-                return sParameterName[1];
-            }
-        }
-    }
-    $(document).ready(function(){
-    	$('#username').text("Commander "+getUrlParameter("username")+" ist auf der Brücke")
-    });
-    </script>
-</body></html>
+		<!-- Am Ende des Dokuments platziert, damit Seiten schneller laden -->
+		<script src="../js/jquery.js"></script>
+		<script src="../js/bootstrap.js"></script>
+		<!-- IE10-Anzeigefenster-Hack für Fehler auf Surface und Desktop-Windows-8 -->
+		<script src="../js/ie10-viewport-bug-workaround.js"></script>
+		<script src="../js/useful.js"></script>
+		<script src="../js/loadUsername.js"></script>
+</body>
+</html>
