--- a/SpaceWars/WebContent/content/html/menuMultiplayerCreate.html
+++ b/SpaceWars/WebContent/content/html/menuMultiplayerCreate.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,45 +21,57 @@
 
 </head>
 <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Navigation ein-/ausblenden</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-       <h3><span class="label  navbar-right" id="username">Spielername ist auf der Brücke</span></h3>
-     </div><!--/.navbar-collapse -->
-   </div>
- </nav>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed"
+					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+					aria-controls="navbar">
+					<span class="sr-only">Navigation ein-/ausblenden</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse">
+				<h3>
+					<span class="label  navbar-right" id="username">Spielername
+						ist auf der Brücke</span>
+				</h3>
+			</div>
+			<!--/.navbar-collapse -->
+		</div>
+	</nav>
 
- <div class="container">
+	<div class="container">
 
-  <form class="form-signin">
-        <h2 class="form-signin-heading">Spiel anlegen</h2>
-        <label for="username" class="sr-only">Name</label>
-        <input id="username" class="form-control" placeholder="Wie soll Ihr Spiel heißen?" required="" autofocus="" type="input">
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Züchtiges Passwort bitte!" required>
+		<form class="form-signin">
+			<h2 class="form-signin-heading">Spiel anlegen</h2>
+			<label for="username" class="sr-only">Name</label> <input
+				id="username" class="form-control"
+				placeholder="Wie soll Ihr Spiel heißen?" required="" autofocus=""
+				type="input"> <label for="inputPassword" class="sr-only">Password</label>
+			<input type="password" id="inputPassword" class="form-control"
+				placeholder="Züchtiges Passwort bitte!" required>
 
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Spiel starten</button>
-      </form>
-
-
-
-</div> <!-- /container -->
-
+			<button class="btn btn-lg btn-primary btn-block" type="submit">Spiel
+				starten</button>
+		</form>
 
 
- <!-- Bootstrap-JavaScript
+
+	</div>
+	<!-- /container -->
+
+
+
+	<!-- Bootstrap-JavaScript
  ================================================== -->
- <!-- Am Ende des Dokuments platziert, damit Seiten schneller laden -->
- <script src="../js/jquery.js"></script>
- <script src="../js/bootstrap.js"></script>
- <!-- IE10-Anzeigefenster-Hack für Fehler auf Surface und Desktop-Windows-8 -->
- <script src="../js/ie10-viewport-bug-workaround.js"></script>
-</body></html>
+	<!-- Am Ende des Dokuments platziert, damit Seiten schneller laden -->
+	<script src="../js/jquery.js"></script>
+	<script src="../js/bootstrap.js"></script>
+	<!-- IE10-Anzeigefenster-Hack für Fehler auf Surface und Desktop-Windows-8 -->
+	<script src="../js/ie10-viewport-bug-workaround.js"></script>
+	<script src="../js/useful.js"></script>
+	<script src="../js/loadUsername.js"></script>
+</body>
+</html>
