--- a/SpaceWars/WebContent/content/html/menuMultiplayerJoin.html
+++ b/SpaceWars/WebContent/content/html/menuMultiplayerJoin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,59 +21,70 @@
 
 </head>
 <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Navigation ein-/ausblenden</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-       <h3><span class="label  navbar-right" id="username">Spielername ist auf der Brücke</span></h3>
-     </div><!--/.navbar-collapse -->
-   </div>
- </nav>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed"
+					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+					aria-controls="navbar">
+					<span class="sr-only">Navigation ein-/ausblenden</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse">
+				<h3>
+					<span class="label  navbar-right" id="username">Spielername
+						ist auf der Brücke</span>
+				</h3>
+			</div>
+			<!--/.navbar-collapse -->
+		</div>
+	</nav>
 
- <div class="menu-box width-box">
+	<div class="menu-box width-box">
 
-   <div class="row">
-    <div class="col-md-12"><h2>Lobby</h2></div>
-  </div>
-  <div class="row">
-    <div class="col-md-12 yscroll">
-    <table class="table table-hover">
-      <tr>
-        <th>Spielname</th>
-        <th>Ersteller</th>
-        <th>Spieltyp</th>
-        <th>Kartentyp</th>
-        <th></th>
-      </tr>
-       <tr >
-        <td>Testspiel</td>
-        <td>Fabian</td>
-        <td>Mensch gegen Computer</td>
-        <td>Großes Universum</td>
-        <td><button class="btn btn-default btn-sm" type="submit">Beitreten</button></td>
-    </table>
-</div>
-  </div>
-</div>
-
-
-
-</div> <!-- /container -->
+		<div class="row">
+			<div class="col-md-12">
+				<h2>Lobby</h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12 yscroll">
+				<table class="table table-hover">
+					<tr>
+						<th>Spielname</th>
+						<th>Ersteller</th>
+						<th>Spieltyp</th>
+						<th>Kartentyp</th>
+						<th></th>
+					</tr>
+					<tr>
+						<td>Testspiel</td>
+						<td>Fabian</td>
+						<td>Mensch gegen Computer</td>
+						<td>Großes Universum</td>
+						<td><button class="btn btn-default btn-sm" type="submit">Beitreten</button></td>
+				</table>
+			</div>
+		</div>
+	</div>
 
 
 
- <!-- Bootstrap-JavaScript
+	</div>
+	<!-- /container -->
+
+
+
+	<!-- Bootstrap-JavaScript
  ================================================== -->
- <!-- Am Ende des Dokuments platziert, damit Seiten schneller laden -->
- <script src="../js/jquery.js"></script>
- <script src="../js/bootstrap.js"></script>
- <!-- IE10-Anzeigefenster-Hack für Fehler auf Surface und Desktop-Windows-8 -->
- <script src="../js/ie10-viewport-bug-workaround.js"></script>
-</body></html>
+	<!-- Am Ende des Dokuments platziert, damit Seiten schneller laden -->
+	<script src="../js/jquery.js"></script>
+	<script src="../js/bootstrap.js"></script>
+	<!-- IE10-Anzeigefenster-Hack für Fehler auf Surface und Desktop-Windows-8 -->
+	<script src="../js/ie10-viewport-bug-workaround.js"></script>
+	<script src="../js/useful.js"></script>
+	<script src="../js/loadUsername.js"></script>
+</body>
+</html>
