need some updates on the html stuff waiting for fabiano

--- a/SpaceWars/WebContent/content/html/menuMain.html
+++ b/SpaceWars/WebContent/content/html/menuMain.html
@@ -50,7 +50,7 @@
 				class="btn btn-lg btn-primary btn-block dropdown-toggle"
 				data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Mehrspieler</button>
 			<ul class="btn btn-lg btn-primary btn-block dropdown-menu">
-				<li><a href="#" onclick="createGame()">Spiel erstellen</a></li>
+				<li><a href="#" onclick="openCreateGame()">Spiel erstellen</a></li>
 				<li><a href="#" onclick="joinGame()">Spiel beitreten</a></li>
 			</ul>
 			<button class="btn btn-lg btn-primary btn-block" type="button" onclick="getHighscore()">Highscore</button>
