--- a/SpaceWars/WebContent/content/html/menuMultiplayerCreate.html
+++ b/SpaceWars/WebContent/content/html/menuMultiplayerCreate.html
@@ -47,7 +47,7 @@
 		<form class="form-signin">
 			<h2 class="form-signin-heading">Spiel anlegen</h2>
 			<label for="username" class="sr-only">Name</label> <input
-				id="username" class="form-control"
+				id="gameName" class="form-control"
 				placeholder="Wie soll Ihr Spiel heißen?" required="" autofocus=""
 				type="input"> <label for="inputPassword" class="sr-only">Password</label>
 			<input type="password" id="inputPassword" class="form-control"
