--- a/SpaceWars/WebContent/content/html/menuMultiplayerCreate.html
+++ b/SpaceWars/WebContent/content/html/menuMultiplayerCreate.html
@@ -53,7 +53,7 @@
 			<input type="password" id="inputPassword" class="form-control"
 				placeholder="Züchtiges Passwort bitte!" required>
 
-			<button class="btn btn-lg btn-primary btn-block" type="submit">Spiel
+			<button class="btn btn-lg btn-primary btn-block" type="button" onclick="createGame()">Spiel
 				starten</button>
 		</form>
 
