--- a/SpaceWars/WebContent/content/html/menuMultiplayerStart.html
+++ b/SpaceWars/WebContent/content/html/menuMultiplayerStart.html
@@ -91,4 +91,6 @@
  <script src="../js/bootstrap.js"></script>
  <!-- IE10-Anzeigefenster-Hack für Fehler auf Surface und Desktop-Windows-8 -->
  <script src="../js/ie10-viewport-bug-workaround.js"></script>
+ <script src="../js/useful.js"></script>
+ <script src="../js/loadUsername.js"></script>
 </body></html>
