added race choice

--- a/SpaceWars/WebContent/content/html/menuRasse.html
+++ b/SpaceWars/WebContent/content/html/menuRasse.html
@@ -52,11 +52,11 @@
 		<div class="row">
 			<div class="col-md-6">
 				<img src="../resources/images/ships/fighter_oukral.jpg" alt="..."
-					class="img-thumbnail">
+					class="img-thumbnail" onclick="chooseRace('wraith')">
 			</div>
 			<div class="col-md-6">
 				<img src="../resources/images/ships/fighter_human.jpg" alt="..."
-					class="img-thumbnail">
+					class="img-thumbnail" onclick="chooseRace('human')">
 			</div>
 		</div>
 	</div>
