--- a/SpaceWars/WebContent/content/html/gameShop.html
+++ b/SpaceWars/WebContent/content/html/gameShop.html
@@ -17,6 +17,7 @@
 <!-- Custom styles for this template -->
 <link href="../css/signin.css" rel="stylesheet">
 <link href="../css/styles.css" rel="stylesheet">
+<link href="../css/game.css" rel="stylesheet">
 
 
 </head>
@@ -42,7 +43,11 @@
   </nav>
 
   <div class="menu-box game-box">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Schließen">
+  <span aria-hidden="true">&times;</span>
+</button>
     <div class="row">
+
       <div class="col-md-12"><h2>Shop</h2></div>
     </div>
     <div class="row">
@@ -67,10 +72,11 @@
           <button type="button" class="btn btn-default center-button disabled"><span class="badge">4</span> Jäger im Warenkorb</button>
           <div class="btn-group center-button">
             <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></button>
-           <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></button>
+           <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-minus-sign" aria-hidden="true"/></button>
          </div> 
           
-       </div> <!-- /container -->
+       </div> 
+       </div><!-- /container -->
 
 
 
