--- a/SpaceWars/WebContent/content/html/gameShop.html
+++ b/SpaceWars/WebContent/content/html/gameShop.html
@@ -17,7 +17,7 @@
 <!-- Custom styles for this template -->
 <link href="../css/signin.css" rel="stylesheet">
 <link href="../css/styles.css" rel="stylesheet">
-
+<link href="../css/game.css" rel="stylesheet">
 
 </head>
 <body>
