--- a/SpaceWars/WebContent/content/html/gameShop.html
+++ b/SpaceWars/WebContent/content/html/gameShop.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,71 +23,289 @@
 
 </head>
 <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Navigation ein-/ausblenden</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <div class="navbar-form navbar-right">
-          <button type="button" class="btn btn-default  disabled"><span class="badge">4000</span> Dollas</button>
-          <button type="submit" class="btn btn-success">Schiffe kaufen<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed"
+					data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+					aria-controls="navbar">
+					<span class="sr-only">Navigation ein-/ausblenden</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+			</div>
+			<div id="navbar" class="navbar-collapse collapse">
+				<div class="navbar-form navbar-right">
+					<button type="button" class="btn btn-default disabled">
+						Verfügbare Jäger <span class="badge">4</span>
+					</button>
+					<button type="button" class="btn btn-default disabled">
+						Verfügbare Schlachtschiffe <span class="badge">4</span>
+					</button>
+					<button type="button" class="btn btn-default  disabled">
+						Guthaben <span class="badge">4000 $</span>
+					</button>
+					<button type="button" class="btn btn-warning">
+						Schiffe kaufen <span class="glyphicon glyphicon-shopping-cart"
+							aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-success">
+						Runde Beenden<span class="glyphicon glyphicon-chevron-right"
+							aria-hidden="true"></span>
+					</button>
 
-        </div>
-      </div><!--/.navbar-collapse -->
-    </div>
-  </nav>
+				</div>
+			</div>
+			<!--/.navbar-collapse -->
+		</div>
+	</nav>
 
-  <div class="menu-box game-box">
-      <button type="button" class="close" data-dismiss="alert" aria-label="Schließen">
-  <span aria-hidden="true">&times;</span>
-</button>
-    <div class="row">
+	<div class="alert alert-dismissible fade in menu-box game-box">
 
-      <div class="col-md-12"><h2>Shop</h2></div>
-    </div>
-    <div class="row">
-      <div class="col-md-4 belongs"><img src="../resources/images/ships/battlestar_oukral.jpg" alt="..." class="img-thumbnail"></div>
-      <div class="col-md-8"><h3>Schlachtschiff</h3><p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-        <p>
-          Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p></div>
+		<div class="row">
 
-          <button type="button" class="btn btn-default center-button disabled"><span class="badge">4</span> Schlachtschiffe im Warenkorb</button>
-          <div class="btn-group center-button">
-            <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></button>
-           <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></button>
-         </div> 
-          
-       </div>
-       <div class="row">
-      <div class="col-md-4 belongs"><img src="../resources/images/ships/fighter_oukral.jpg" alt="..." class="img-thumbnail"></div>
-      <div class="col-md-8"><h3>Jäger</h3><p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-        <p>
-          Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p></div>
+			<div class="col-md-12">
+				<h2>
+					Schiffe kaufen
+					<button type="button" class="close" data-dismiss="alert"
+						aria-label="Schließen">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4 belongs">
+				<img src="../resources/images/ships/battlestar_oukral.jpg" alt="..."
+					class="img-thumbnail">
+			</div>
+			<div class="col-md-8">
+				<h3>Schlachtschiff</h3>
+				<p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum
+					sociis natoque penatibus et magnis dis parturient montes, nascetur
+					ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
+				<p>Cum sociis natoque penatibus et magnis dis parturient montes,
+					nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor
+					fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor
+					ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non
+					metus auctor fringilla.</p>
+			</div>
+			<div class="btn-group center-button">
+				<button type="button" class="btn btn-default">
+					<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+				</button>
+				<button type="button" class="btn btn-default">
+					<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+				</button>
+			</div>
 
-          <button type="button" class="btn btn-default center-button disabled"><span class="badge">4</span> Jäger im Warenkorb</button>
-          <div class="btn-group center-button">
-            <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></button>
-           <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-minus-sign" aria-hidden="true"/></button>
-         </div> 
-          
-       </div> 
-       </div><!-- /container -->
+		</div>
+		<div class="row">
+			<div class="col-md-4 belongs">
+				<img src="../resources/images/ships/fighter_oukral.jpg" alt="..."
+					class="img-thumbnail">
+			</div>
+			<div class="col-md-8">
+				<h3>Jäger</h3>
+				<p>Nullam quis risus eget urna mollis ornare vel eu leo. Cum
+					sociis natoque penatibus et magnis dis parturient montes, nascetur
+					ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
+				<p>Cum sociis natoque penatibus et magnis dis parturient montes,
+					nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor
+					fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor
+					ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non
+					metus auctor fringilla.</p>
+			</div>
+
+
+			<div class="btn-group center-button">
+				<button type="button" class="btn btn-default">
+					<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+				</button>
+				<button type="button" class="btn btn-default">
+					<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+				</button>
+			</div>
+
+		</div>
+
+	</div>
+	<div>
+		<div class="row">
+			<div class="col-md-4 text-center">
+				<br> <br> <br> <img
+					src="../resources/images/planets/erde.png" alt="...">
+				<h4 class="white">
+					<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+					Erde
+				</h4>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default ">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					</button>
+					<button type="button"
+						class="btn btn-default disabled same samewidth">
+						Schlachtschiffe <span class="badge textright">4</span>
+					</button>
+				</div>
+				<br>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default disabled samewidth">
+						Jäger <span class="badge textright">4</span>
+					</button>
+				</div>
+			</div>
+
+
+			<div class="col-md-4 text-center">
+				<img src="../resources/images/planets/tatooin.png" alt="...">
+				<h4 class="text-center">
+					<span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
+					Tatooin
+				</h4>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default ">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					</button>
+					<button type="button"
+						class="btn btn-default disabled same samewidth">
+						Schlachtschiffe <span class="badge textright">4</span>
+					</button>
+				</div>
+				<br>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default disabled samewidth">
+						Jäger <span class="badge textright">4</span>
+					</button>
+				</div>
+			</div>
+			<div class="col-md-4 text-center">
+				<br> <img src="../resources/images/planets/coruscant.png"
+					alt="...">
+				<h4 class="text-center">Coruscant</h4>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default ">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					</button>
+					<button type="button"
+						class="btn btn-default disabled same samewidth">
+						Schlachtschiffe <span class="badge textright">4</span>
+					</button>
+				</div>
+				<br>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default disabled samewidth">
+						Jäger <span class="badge textright">4</span>
+					</button>
+				</div>
+			</div>
+
+
+		</div>
+		<div class="row">
+			<div class="col-md-3 "></div>
+
+			<div class="col-md-3 text-center">
+				<img src="../resources/images/planets/caprica.png" alt="...">
+				<h4 class="text-center">Caprica</h4>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default ">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					</button>
+					<button type="button"
+						class="btn btn-default disabled same samewidth">
+						Schlachtschiffe <span class="badge textright">4</span>
+					</button>
+				</div>
+				<br>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default disabled samewidth">
+						Jäger <span class="badge textright">4</span>
+					</button>
+				</div>
+			</div>
+
+			<div class="col-md-3 text-center">
+				<br> <br> <img src="../resources/images/planets/endor.png"
+					alt="...">
+				<h4 class="text-center">Endor</h4>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default ">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					</button>
+					<button type="button"
+						class="btn btn-default disabled same samewidth">
+						Schlachtschiffe <span class="badge textright">4</span>
+					</button>
+				</div>
+				<br>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					</button>
+					<button type="button" class="btn btn-default disabled samewidth">
+						Jäger <span class="badge textright">4</span>
+					</button>
+				</div>
+			</div>
+
+			<div class="col-md-3 "></div>
+		</div>
+	</div>
+	<!-- /container -->
 
 
 
- <!-- Bootstrap-JavaScript
+	<!-- Bootstrap-JavaScript
  ================================================== -->
- <!-- Am Ende des Dokuments platziert, damit Seiten schneller laden -->
- <script src="../js/jquery.js"></script>
- <script src="../js/bootstrap.js"></script>
- <!-- IE10-Anzeigefenster-Hack für Fehler auf Surface und Desktop-Windows-8 -->
- <script src="../js/ie10-viewport-bug-workaround.js"></script>
- <script src="../js/useful.js"></script>
- <script src="../js/loadUsername.js"></script>
-</body></html>
+	<!-- Am Ende des Dokuments platziert, damit Seiten schneller laden -->
+	<script src="../js/jquery.js"></script>
+	<script src="../js/bootstrap.js"></script>
+	<!-- IE10-Anzeigefenster-Hack für Fehler auf Surface und Desktop-Windows-8 -->
+	<script src="../js/ie10-viewport-bug-workaround.js"></script>
+	<script src="../js/useful.js"></script>
+	<script src="../js/loadUsername.js"></script>
+</body>
+</html>
