WebContent Button fix

--- a/SpaceWars/WebContent/content/html/gameFive.html
+++ b/SpaceWars/WebContent/content/html/gameFive.html
@@ -262,7 +262,7 @@
 			</div>
 
 			<div class="col-md-3 text-center">
-				<br> <br> <img src="../resources/images/planets/endor.png"
+				<img src="../resources/images/planets/endor.png"
 					alt="...">
 				<h4 class="text-center">Endor</h4>
 				<div class="btn-group">
