--- a/SpaceWars/WebContent/content/html/menuMultiplayerJoin.html
+++ b/SpaceWars/WebContent/content/html/menuMultiplayerJoin.html
@@ -64,7 +64,7 @@
 						<td>Fabian</td>
 						<td>Mensch gegen Computer</td>
 						<td>Großes Universum</td>
-						<td><button class="btn btn-default btn-sm" type="submit">Beitreten</button></td>
+						<td><button class="btn btn-default btn-sm" type="button">Beitreten</button></td>
 				</table>
 			</div>
 		</div>
