--- a/SpaceWars/WebContent/content/html/menuMultiplayerStart.html
+++ b/SpaceWars/WebContent/content/html/menuMultiplayerStart.html
@@ -32,7 +32,7 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
       <form class="navbar-form navbar-right">
-            <button type="submit" class="btn btn-success">Spiel Starten</button>
+            <button type="button" class="btn btn-success">Spiel Starten</button>
           </form>
      </div><!--/.navbar-collapse -->
    </div>
@@ -50,7 +50,7 @@
         <div class="form-group">
           <input type="text" class="form-control btn-block" id="message" placeholder="Ihre Nachricht">
         </div>
-        <button type="submit" class="btn btn-default">Abschicken</button>
+        <button type="button" class="btn btn-default">Abschicken</button>
       </form>
     </div>
     <div class="col-md-4"> 
