--- a/SpaceWars/WebContent/content/html/gameFive.html
+++ b/SpaceWars/WebContent/content/html/gameFive.html
@@ -236,27 +236,29 @@
 				<img src="../resources/images/planets/caprica.png" alt="...">
 				<h4 class="text-center">Caprica</h4>
 				<div class="btn-group">
+					<button type="button"
+						class="btn btn-default disabled same samewidth">
+						Schlachtschiffe <span class="badge textright">4</span>
+					</button>
 					<button type="button" class="btn btn-default ">
 						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
 					</button>
 					<button type="button" class="btn btn-default">
 						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
 					</button>
+
+				</div>
+				<br>
+				<div class="btn-group">
 					<button type="button"
 						class="btn btn-default disabled same samewidth">
 						Schlachtschiffe <span class="badge textright">4</span>
 					</button>
-				</div>
-				<br>
-				<div class="btn-group">
-					<button type="button" class="btn btn-default">
+					<button type="button" class="btn btn-default ">
 						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
 					</button>
 					<button type="button" class="btn btn-default">
 						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
-					</button>
-					<button type="button" class="btn btn-default disabled samewidth">
-						Jäger <span class="badge textright">4</span>
 					</button>
 				</div>
 			</div>
@@ -266,27 +268,29 @@
 					alt="...">
 				<h4 class="text-center">Endor</h4>
 				<div class="btn-group">
+					<button type="button"
+						class="btn btn-default disabled same samewidth">
+						Schlachtschiffe <span class="badge textright">4</span>
+					</button>
 					<button type="button" class="btn btn-default ">
 						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
 					</button>
 					<button type="button" class="btn btn-default">
 						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
 					</button>
+
+				</div>
+				<br>
+				<div class="btn-group">
 					<button type="button"
 						class="btn btn-default disabled same samewidth">
 						Schlachtschiffe <span class="badge textright">4</span>
 					</button>
-				</div>
-				<br>
-				<div class="btn-group">
-					<button type="button" class="btn btn-default">
+					<button type="button" class="btn btn-default ">
 						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
 					</button>
 					<button type="button" class="btn btn-default">
 						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
-					</button>
-					<button type="button" class="btn btn-default disabled samewidth">
-						Jäger <span class="badge textright">4</span>
 					</button>
 				</div>
 			</div>
