--- a/SpaceWars/WebContent/content/html/menuRasse.html
+++ b/SpaceWars/WebContent/content/html/menuRasse.html
@@ -51,12 +51,17 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6">
-				<img src="../resources/images/ships/fighter_oukral.jpg" alt="..."
-					class="img-thumbnail" onclick="chooseRace('wraith')">
+				<button type="button" class="btn-block btn-transparent">
+					<img src="../resources/images/ships/fighter_oukral.jpg" alt="..."
+						class="img-thumbnail" onclick="chooseRace('wraith')">
+				</button>
 			</div>
 			<div class="col-md-6">
-				<img src="../resources/images/ships/fighter_human.jpg" alt="..."
-					class="img-thumbnail" onclick="chooseRace('human')">
+
+				<button type="button" class="btn-block btn-transparent">
+					<img src="../resources/images/ships/fighter_human.jpg" alt="..."
+						class="img-thumbnail" onclick="chooseRace('wraith')">
+				</button>
 			</div>
 		</div>
 	</div>
