added race to buttons

--- a/SpaceWars/WebContent/content/html/menuRasse.html
+++ b/SpaceWars/WebContent/content/html/menuRasse.html
@@ -51,16 +51,16 @@
 		</div>
 		<div class="row">
 			<div class="col-md-6">
-				<button type="button" class="btn-block btn-transparent">
+				<button type="button" class="btn-block btn-transparent" onclick="chooseRace('wraith')">
 					<img src="../resources/images/ships/fighter_oukral.jpg" alt="..."
-						class="img-thumbnail" onclick="chooseRace('wraith')">
+						class="img-thumbnail" >
 				</button>
 			</div>
 			<div class="col-md-6">
 
-				<button type="button" class="btn-block btn-transparent">
+				<button type="button" class="btn-block btn-transparent" onclick="chooseRace('human')">
 					<img src="../resources/images/ships/fighter_human.jpg" alt="..."
-						class="img-thumbnail" onclick="chooseRace('wraith')">
+						class="img-thumbnail" >
 				</button>
 			</div>
 		</div>
