--- a/SpaceWars/WebContent/content/html/menuKarte.html
+++ b/SpaceWars/WebContent/content/html/menuKarte.html
@@ -51,6 +51,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12">
+				
 				<!-- Carousel
     ================================================== -->
 				<div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -60,6 +61,7 @@
 						<li class="" data-target="#myCarousel" data-slide-to="1"></li>
 						<li data-target="#myCarousel" data-slide-to="2"></li>
 					</ol>
+
 					<div class="carousel-inner" role="listbox">
 						<div class="item active">
 							<img class="first-slide"
@@ -69,8 +71,9 @@
 								<div class="carousel-caption">
 									<h1>Kleines Universum</h1>
 									<p>
-										<a class="btn btn-lg btn-primary" href="#" role="button">Spiel
-											Starten</a>
+										<button class="btn btn-lg btn-primary" type="button" onclick="chooseUniverse(0)">Spiel
+											Starten</button>
+
 									</p>
 								</div>
 							</div>
@@ -83,8 +86,8 @@
 								<div class="carousel-caption">
 									<h1>Mitleres Universum</h1>
 									<p>
-										<a class="btn btn-lg btn-primary" href="#" role="button">Spiel
-											Starten</a>
+										<button class="btn btn-lg btn-primary" type="button" onclick="chooseUniverse(1)">Spiel
+											Starten</button>
 									</p>
 								</div>
 							</div>
@@ -97,8 +100,8 @@
 								<div class="carousel-caption">
 									<h1>Großes Universum</h1>
 									<p>
-										<a class="btn btn-lg btn-primary" href="#" role="button">Spiel
-											Starten</a>
+										<button class="btn btn-lg btn-primary" type="button" onclick="chooseUniverse(2)">Spiel
+											Starten</button>
 									</p>
 								</div>
 							</div>
