--- a/SpaceWars/WebContent/content/html/menuTeam.html
+++ b/SpaceWars/WebContent/content/html/menuTeam.html
@@ -52,7 +52,7 @@
 		<div class="row">
 			<div class="col-md-6">
 				<button type="button" class="btn-block btn-transparent" onclick="chooseRace('wraith')">
-					<img src="../resources/images/ships/fighter_oukral.jpg" alt="..."
+					<img src="../resources/images/HvsC.png" alt="..."
 						class="img-thumbnail" >
 				<h2>Ihr gegen den Computer</h2>
 				</button>
@@ -60,7 +60,7 @@
 			<div class="col-md-6">
 
 				<button type="button" class="btn-block btn-transparent" onclick="chooseRace('human')">
-					<img src="../resources/images/ships/fighter_human.jpg" alt="..."
+					<img src="../resources/images/HvsH.png" alt="..."
 						class="img-thumbnail" >
 				</button>
 				<h2>Gegen einander</h2>
