--- a/SpaceWars/WebContent/content/html/gameFive.html
+++ b/SpaceWars/WebContent/content/html/gameFive.html
@@ -59,7 +59,7 @@
 			<!--/.navbar-collapse -->
 		</div>
 	</nav>
-
+	<!----------------------------------------------------------Kaufmenü---------------------------------------------------------->
 	<div class="alert alert-dismissible fade in menu-box game-box">
 
 		<div class="row">
@@ -130,6 +130,80 @@
 		</div>
 
 	</div>
+	<!----------------------------------------------------------Report---------------------------------------------------------->
+	<div class="alert alert-dismissible fade in menu-box game-box">
+
+		
+				<div class="row">
+
+			<div class="col-md-12">
+				<h2>
+					Report
+					<button type="button" class="close" data-dismiss="alert"
+						aria-label="Schließen">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4">
+				<div>
+					<img src="../resources/images/planets/erde1.png" alt="...">
+					<div class="caption">
+						<h3>Erde</h3>
+						<p>...</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-4">
+				<div>
+					<img src="../resources/images/planets/tatooin1.png" alt="...">
+					<div class="caption">
+						<h3>Tatooin</h3>
+						<p>...</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div>
+					<img src="../resources/images/planets/coruscant1.png" alt="...">
+					<div class="caption">
+						<h3>Coruscant</h3>
+						<p>...</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4">
+				<div>
+					<img src="../resources/images/planets/caprica1.png" alt="...">
+					<div class="caption">
+						<h3>Caprica</h3>
+						<p>...</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div>
+					<img src="../resources/images/planets/endor1.png" alt="...">
+					<div class="caption">
+						<h3>Endor</h3>
+						<p>...</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
+	</div>
+
+
+
+	<!----------------------------------------------------------Game---------------------------------------------------------->
 	<div>
 		<div class="row">
 			<div class="col-md-4 text-center">
@@ -264,8 +338,7 @@
 			</div>
 
 			<div class="col-md-3 text-center">
-				<img src="../resources/images/planets/endor.png"
-					alt="...">
+				<img src="../resources/images/planets/endor.png" alt="...">
 				<h4 class="text-center">Endor</h4>
 				<div class="btn-group">
 					<button type="button"
