--- a/SpaceWars/WebContent/content/html/menuKarte.html
+++ b/SpaceWars/WebContent/content/html/menuKarte.html
@@ -65,7 +65,7 @@
 					<div class="carousel-inner" role="listbox">
 						<div class="item active">
 							<img class="first-slide"
-								src="../resources/images/Karten/three.png"
+								src="../resources/images/Karten/three.jpg"
 								alt="First slide">
 							<div class="container">
 								<div class="carousel-caption">
@@ -80,7 +80,7 @@
 						</div>
 						<div class="item">
 							<img class="second-slide"
-								src="../resources/images/Karten/five.png"
+								src="../resources/images/Karten/five.jpg"
 								alt="Second slide">
 							<div class="container">
 								<div class="carousel-caption">
@@ -94,7 +94,7 @@
 						</div>
 						<div class="item">
 							<img class="third-slide"
-								src="../resources/images/Karten/seven.png"
+								src="../resources/images/Karten/seven.jpg"
 								alt="Third slide">
 							<div class="container">
 								<div class="carousel-caption">
