--- a/SpaceWars/WebContent/index.html
+++ b/SpaceWars/WebContent/index.html
@@ -9,6 +9,7 @@
 <body>
 <a href="content/index.html">Start Game</a>
 <a href="#" onclick="submitUser()">post</a>
+<a href="#" onclick="sendJSON()">postToGaming</a>
 </body>
 <script >
 function submitUser(){
@@ -21,6 +22,21 @@ function submitUser(){
 		type : "POST",
 		data : {
 			"username" : username
+		}
+	});
+}
+function sendJSON(){
+		var username = "hallo";
+	$.ajax({
+		url : "/SpaceWars/gaming",
+		type : "POST",
+		data : {
+			"username" : username,
+			"anderesObjekt":{
+				"wert1":1,
+				"wert2":"test",
+				"wert3":true
+			}
 		}
 	});
 }
