--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -37,17 +37,17 @@
 			<div id="navbar" class="navbar-collapse collapse">
 				<div class="navbar-form navbar-right">
 					<button type="button" class="btn btn-default disabled">
-						Verfügbare Jäger <span class="badge">4</span>
+						Verfügbare Jäger <span id="fighter" class="badge">4</span>
 					</button>
 					<button type="button" class="btn btn-default disabled">
-						Verfügbare Schlachtschiffe <span class="badge">4</span>
+						Verfügbare Schlachtschiffe <span id="battlestar" class="badge">4</span>
 					</button>
 					<button type="button" class="btn btn-default  disabled">
-						Guthaben <span class="badge">4000 $</span>
+						Guthaben <span id="credits" class="badge">4000 $</span>
 					</button>
-					<button type="button" class="btn btn-warning">
+					<button type="button" class="btn btn-warning" onclick="openShop()">
 						Schiffe kaufen <span class="glyphicon glyphicon-shopping-cart"
-							aria-hidden="true">
+							aria-hidden="true"></span>
 					</button>
 					<button type="button" class="btn btn-success">
 						Runde Beenden<span class="glyphicon glyphicon-chevron-right"
@@ -59,17 +59,17 @@
 			<!--/.navbar-collapse -->
 		</div>
 	</nav>
-
-	<div class="alert alert-dismissible fade in menu-box game-box">
+	<!----------------------------------------------------------Kaufmenü---------------------------------------------------------->
+	<div id="shop" class="fade in menu-box game-box popup">
 
 		<div class="row">
 
 			<div class="col-md-12">
 				<h2>
 					Schiffe kaufen
-					<button type="button" class="close" data-dismiss="alert"
-						aria-label="Schließen">
-						<span aria-hidden="true">&times;</span>
+					<button type="button" class="close" aria-label="Schließen"
+						onclick="closeShop()">
+						<span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 					</button>
 				</h2>
 			</div>
@@ -130,6 +130,88 @@
 		</div>
 
 	</div>
+	<!----------------------------------------------------------Report---------------------------------------------------------->
+	<div id="report" class="fade in menu-box game-box popup">
+
+
+		<div class="row">
+
+			<div class="col-md-12">
+				<h2>
+					Report
+					<button type="button" class="close" aria-label="Schließen">
+						<span aria-hidden="true">&times;</span>
+					</button>
+				</h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-3">
+				<div>
+					<img src="../resources/images/planets/erde1.png" alt="...">
+					<div class="caption">
+						<h3>Erde</h3>
+						<p>...</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-3">
+				<div>
+					<img src="../resources/images/planets/tatooin1.png" alt="...">
+					<div class="caption">
+						<h3>Tatooin</h3>
+						<p>...</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div>
+					<img src="../resources/images/planets/coruscant1.png" alt="...">
+					<div class="caption">
+						<h3>Coruscant</h3>
+						<p>...</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-3">
+				<div>
+					<img src="../resources/images/planets/germenon1.png" alt="...">
+					<div class="caption">
+						<h3>Coruscant</h3>
+						<p>...</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4">
+				<div>
+					<img src="../resources/images/planets/caprica1.png" alt="...">
+					<div class="caption">
+						<h3>Caprica</h3>
+						<p>...</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<div>
+					<img src="../resources/images/planets/endor1.png" alt="...">
+					<div class="caption">
+						<h3>Endor</h3>
+						<p>...</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+
+
+	</div>
+
+
+
+	<!----------------------------------------------------------Game---------------------------------------------------------->
 	<div>
 		<div class="row">
 			<div class="col-md-4 text-center">
@@ -140,89 +222,110 @@
 					Erde
 				</h4>
 				<div class="btn-group">
-					<button type="button" class="btn btn-default ">
-						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					<button type="button" class="btn btn-default "
+						onclick="battlestarPlus('erde')">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
 					</button>
-					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					<button type="button" class="btn btn-default"
+						onclick="battlestarMinus('erde')">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
 					</button>
 					<button type="button"
 						class="btn btn-default disabled same samewidth">
-						Schlachtschiffe <span class="badge textright">4</span>
+						<span id="erdeBattlestar" class="badge textright">4</span>
+						Schlachtschiffe
 					</button>
 				</div>
 				<br>
 				<div class="btn-group">
 					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"
+							onclick="fighterPlus('erde')"></span>
 					</button>
 					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"
+							onclick="fighterMinus('erde')"></span>
 					</button>
 					<button type="button" class="btn btn-default disabled samewidth">
-						Jäger <span class="badge textright">4</span>
+						<span id="erdeFighter" class="badge textright">4</span> Jäger
 					</button>
 				</div>
 			</div>
 
 
 			<div class="col-md-4 text-center">
-				<img src="../resources/images/planets/tatooin.png" alt="...">
-				<h4 class="text-center">
-					<span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
-					Tatooin
+				<br> <br> <br> <img
+					src="../resources/images/planets/tatooine.png" alt="...">
+				<h4 class="white">
+					<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+					Tatooine
 				</h4>
 				<div class="btn-group">
-					<button type="button" class="btn btn-default ">
-						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					<button type="button" class="btn btn-default "
+						onclick="battlestarPlus('tatooine')">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
 					</button>
-					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					<button type="button" class="btn btn-default"
+						onclick="battlestarMinus('tatooine')">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
 					</button>
 					<button type="button"
 						class="btn btn-default disabled same samewidth">
-						Schlachtschiffe <span class="badge textright">4</span>
+						<span id="tatooineBattlestar" class="badge textright">4</span>
+						Schlachtschiffe
 					</button>
 				</div>
 				<br>
 				<div class="btn-group">
 					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"
+							onclick="fighterPlus('tatooine')"></span>
 					</button>
 					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"
+							onclick="fighterMinus('tatooine')"></span>
 					</button>
 					<button type="button" class="btn btn-default disabled samewidth">
-						Jäger <span class="badge textright">4</span>
+						<span id="tatooineFighter" class="badge textright">4</span> Jäger
 					</button>
 				</div>
 			</div>
+
+
 			<div class="col-md-4 text-center">
-				<br> <img src="../resources/images/planets/coruscant.png"
-					alt="...">
-				<h4 class="text-center">Coruscant</h4>
+				<br> <br> <br> <img
+					src="../resources/images/planets/coruscant.png" alt="...">
+				<h4 class="white">
+					<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+					Coruscant
+				</h4>
 				<div class="btn-group">
-					<button type="button" class="btn btn-default ">
-						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					<button type="button" class="btn btn-default "
+						onclick="battlestarPlus('coruscant')">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
 					</button>
-					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					<button type="button" class="btn btn-default"
+						onclick="battlestarMinus('coruscant')">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
 					</button>
 					<button type="button"
 						class="btn btn-default disabled same samewidth">
-						Schlachtschiffe <span class="badge textright">4</span>
+						<span id="coruscantBattlestar" class="badge textright">4</span>
+						Schlachtschiffe
 					</button>
 				</div>
 				<br>
 				<div class="btn-group">
 					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"
+							onclick="fighterPlus('coruscant')"></span>
 					</button>
 					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"
+							onclick="fighterMinus('coruscant')"></span>
 					</button>
 					<button type="button" class="btn btn-default disabled samewidth">
-						Jäger <span class="badge textright">4</span>
+						<span id="coruscantFighter" class="badge textright">4</span> Jäger
 					</button>
 				</div>
 			</div>
@@ -230,70 +333,162 @@
 
 		</div>
 		<div class="row">
-			<div class="col-md-3 "></div>
-
 			<div class="col-md-3 text-center">
-				<img src="../resources/images/planets/caprica.png" alt="...">
-				<h4 class="text-center">Caprica</h4>
+				<br> <br> <br> <img
+					src="../resources/images/planets/germenon.png" alt="...">
+				<h4 class="white">
+					<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+					Germenon
+				</h4>
 				<div class="btn-group">
-					<button type="button" class="btn btn-default ">
-						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					<button type="button" class="btn btn-default "
+						onclick="battlestarPlus('gemini')">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
 					</button>
-					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					<button type="button" class="btn btn-default"
+						onclick="battlestarMinus('gemini')">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
 					</button>
 					<button type="button"
 						class="btn btn-default disabled same samewidth">
-						Schlachtschiffe <span class="badge textright">4</span>
+						<span id="geminiBattlestar" class="badge textright">4</span>
+						Schlachtschiffe
 					</button>
 				</div>
 				<br>
 				<div class="btn-group">
 					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"
+							onclick="fighterPlus('gemini')"></span>
 					</button>
 					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"
+							onclick="fighterMinus('gemini')"></span>
 					</button>
 					<button type="button" class="btn btn-default disabled samewidth">
-						Jäger <span class="badge textright">4</span>
+						<span id="geminiFighter" class="badge textright">4</span> Jäger
 					</button>
 				</div>
 			</div>
 
 			<div class="col-md-3 text-center">
-				<img src="../resources/images/planets/endor.png"
-					alt="...">
-				<h4 class="text-center">Endor</h4>
+				<br> <br> <br> <img
+					src="../resources/images/planets/caprica.png" alt="...">
+				<h4 class="white">
+					<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+					Caprica
+				</h4>
 				<div class="btn-group">
-					<button type="button" class="btn btn-default ">
-						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					<button type="button" class="btn btn-default "
+						onclick="battlestarPlus('caprica')">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
 					</button>
-					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					<button type="button" class="btn btn-default"
+						onclick="battlestarMinus('caprica')">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
 					</button>
 					<button type="button"
 						class="btn btn-default disabled same samewidth">
-						Schlachtschiffe <span class="badge textright">4</span>
+						<span id="capricaBattlestar" class="badge textright">4</span>
+						Schlachtschiffe
 					</button>
 				</div>
 				<br>
 				<div class="btn-group">
 					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"
+							onclick="fighterPlus('caprica')"></span>
 					</button>
 					<button type="button" class="btn btn-default">
-						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"
+							onclick="fighterMinus('caprica')"></span>
 					</button>
 					<button type="button" class="btn btn-default disabled samewidth">
-						Jäger <span class="badge textright">4</span>
+						<span id="capricaFighter" class="badge textright">4</span> Jäger
 					</button>
 				</div>
 			</div>
 
-			<div class="col-md-3 "></div>
+			<div class="col-md-3 text-center">
+				<br> <br> <br> <img
+					src="../resources/images/planets/endor.png" alt="...">
+				<h4 class="white">
+					<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+					Endor
+				</h4>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default "
+						onclick="battlestarPlus('endor')">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+					</button>
+					<button type="button" class="btn btn-default"
+						onclick="battlestarMinus('endor')">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
+					</button>
+					<button type="button"
+						class="btn btn-default disabled same samewidth">
+						<span id="endorBattlestar" class="badge textright">4</span>
+						Schlachtschiffe
+					</button>
+				</div>
+				<br>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"
+							onclick="fighterPlus('endor')"></span>
+					</button>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"
+							onclick="fighterMinus('endor')"></span>
+					</button>
+					<button type="button" class="btn btn-default disabled samewidth">
+						<span id="endorFighter" class="badge textright">4</span> Jäger
+					</button>
+				</div>
+			</div>
+			
+			
+			<div class="col-md-3 text-center">
+				<br> <br> <br> <img
+					src="../resources/images/planets/atlantis.png" alt="...">
+				<h4 class="white">
+					<span class="glyphicon glyphicon-star" aria-hidden="true"></span>
+					Atlantis
+				</h4>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default "
+						onclick="battlestarPlus('atlantis')">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+					</button>
+					<button type="button" class="btn btn-default"
+						onclick="battlestarMinus('atlantis')">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"></span>
+					</button>
+					<button type="button"
+						class="btn btn-default disabled same samewidth">
+						<span id="atlantisBattlestar" class="badge textright">4</span>
+						Schlachtschiffe
+					</button>
+				</div>
+				<br>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"
+							onclick="fighterPlus('atlantis')"></span>
+					</button>
+					<button type="button" class="btn btn-default">
+						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"
+							onclick="fighterMinus('atlantis')"></span>
+					</button>
+					<button type="button" class="btn btn-default disabled samewidth">
+						<span id="atlantisFighter" class="badge textright">4</span> Jäger
+					</button>
+				</div>
+			</div>
+
 		</div>
 	</div>
+	
 	<!-- /container -->
 
 
@@ -307,5 +502,7 @@
 	<script src="../js/ie10-viewport-bug-workaround.js"></script>
 	<script src="../js/useful.js"></script>
 	<script src="../js/loadUsername.js"></script>
+	<script src="../js/recenter.js"></script>
+	<script src="../js/gameFunctions.js"></script>
 </body>
 </html>
