--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -92,10 +92,10 @@
 			</div>
 			<div class="btn-group center-button">
 				<button type="button" class="btn btn-default">
-					<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					<span id="buyBattlestarPlus" class="glyphicon glyphicon-plus-sign" aria-hidden="true">
 				</button>
 				<button type="button" class="btn btn-default">
-					<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					<span id="buyBattlestarMinus" class="glyphicon glyphicon-minus-sign" aria-hidden="true">
 				</button>
 			</div>
 
@@ -120,10 +120,10 @@
 
 			<div class="btn-group center-button">
 				<button type="button" class="btn btn-default">
-					<span class="glyphicon glyphicon-plus-sign" aria-hidden="true">
+					<span id="buyFighterPlus" class="glyphicon glyphicon-plus-sign" aria-hidden="true">
 				</button>
 				<button type="button" class="btn btn-default">
-					<span class="glyphicon glyphicon-minus-sign" aria-hidden="true">
+					<span id="buyFighterMinus" class="glyphicon glyphicon-minus-sign" aria-hidden="true">
 				</button>
 			</div>
 
