--- a/SpaceWars/WebContent/content/html/gameSeven.html
+++ b/SpaceWars/WebContent/content/html/gameSeven.html
@@ -238,9 +238,9 @@
 				</div>
 				<br>
 				<div class="btn-group">
-					<button type="button" class="btn btn-default">
+					<button type="button" class="btn btn-default" onclick="fighterPlus('erde')">
 						<span class="glyphicon glyphicon-plus-sign" aria-hidden="true"
-							onclick="fighterPlus('erde')"></span>
+							></span>
 					</button>
 					<button type="button" class="btn btn-default">
 						<span class="glyphicon glyphicon-minus-sign" aria-hidden="true"
